fix (form): make the label always align with the content in the Input Container

--- a/packages/form/src/fields/utils/components/InputContainer/InputContainer.scss
+++ b/packages/form/src/fields/utils/components/InputContainer/InputContainer.scss
@@ -68,7 +68,6 @@
   &.has-content label {
     font-weight: bold;
     top: 18px;
-    left: 21px;
     opacity: 0.7;
     transform: translateY(-50%) scale(0.666);
   }
